packages/kotlin/ttrp-frontend/src/test/resources/resolution/negative/res-001-bare-miss.ttrp
// expect: TTRP-RES-001
container c target polars {
    s = load(nope_thing)
}
